--- a/src/app/modulos/comprobaciones-gastos/gastos_viajes/gastos-viajes-form/gastos-viajes-form.component.html
+++ b/src/app/modulos/comprobaciones-gastos/gastos_viajes/gastos-viajes-form/gastos-viajes-form.component.html
@@ -1,8 +1,9 @@
-<app-form-comrpobacion-header (onContinuar)="guardarFormHeader($event)" (onCancelar)="cancelarComprobacion()"
+<app-form-comprobacion-header (onContinuar)="guardarFormHeader($event)" (onCancelar)="cancelarComprobacion()"
   [lista_contribuyente]="lista_contribuyentes" [lista_moneda]="lista_monedas"
   [lista_centro_costos]="lista_centros_costo" [numero_comprobacion]='numero_comprobacion'
   [comprobacion_header]="comprobacion_header">
-</app-form-comrpobacion-header>
+</app-form-comprobacion-header>
+
 <!-- Carga de Documentos -->
 <div class="row" *ngIf="numero_comprobacion">
   <div class="col-md-4 col-sm-6 col-xs-12">
@@ -18,19 +19,22 @@
   </div>
 </div>
 
-<app-carga-doc-nacional *ngIf="tipo_comprobante === 'nacional'" (cancelarCarga)="cancelarCarga()"
+<app-carga-comprobante-nacional *ngIf="tipo_comprobante === 'nacional'" (cancelarCarga)="cancelarCarga()"
   (enviarArchivo)="setArchivo($event)" [lista_cuentas]="lista_cuentas" (enviarConceptos)="enviarConceptos($event)"
-  (enviarDetalleFactura)="setDetalles($event)" (setTimpoCambio)="setTipoCambio($event)"></app-carga-doc-nacional>
+  (enviarDetalleFactura)="setDetalles($event)" (setTimpoCambio)="setTipoCambio($event)">
+</app-carga-comprobante-nacional>
 
-<app-carga-doc-ext *ngIf="tipo_comprobante === 'internacional'" [solicitud]="solicitud" [lista_monedas]="lista_monedas"
-  [lista_cuentas]="lista_cuentas" [numero_comprobante]="numero_viaje" (actualizarFecha)="actualizarFecha($event)"
-  (enviarDetalleFactura)="setDetalles($event)" (enviarConceptos)="enviarConceptos($event)"
-  (enviarDatos)="enviarDatos($event)" (cancelarCarga)="cancelarCarga()" (setTimpoCambio)="setTipoCambio($event)">
-</app-carga-doc-ext>
+<app-carga-comprobante-extranjero *ngIf="tipo_comprobante === 'internacional'" [solicitud]="solicitud"
+  [lista_monedas]="lista_monedas" [lista_cuentas]="lista_cuentas" [numero_comprobante]="numero_viaje"
+  (actualizarFecha)="actualizarFecha($event)" (enviarDetalleFactura)="setDetalles($event)"
+  (enviarConceptos)="enviarConceptos($event)" (enviarDatos)="enviarDatos($event)" (cancelarCarga)="cancelarCarga()"
+  (setTimpoCambio)="setTipoCambio($event)">
+</app-carga-comprobante-extranjero>
 
-<app-lista-comprobantes *ngIf="numero_comprobacion" #lista_comprobantes [lista_comprobaciones]="lista_comprobaciones"
-  [total_comprobado]="total_comprobado" [id_solicitud]="id_solicitud" [tipo_cambio]="tipo_cambio"
-  (eliminarComprobacion)="eliminarComprobacion($event)" (cancelar)="cancelar()" (comprobar)="comprobar($event)">
-</app-lista-comprobantes>
+<app-lista-comprobantes-carga *ngIf="numero_comprobacion" #lista_comprobantes
+  [lista_comprobaciones]="lista_comprobaciones" [total_comprobado]="total_comprobado" [id_solicitud]="id_solicitud"
+  [tipo_cambio]="tipo_cambio" (eliminarComprobacion)="eliminarComprobacion($event)" (cancelar)="cancelar()"
+  (comprobar)="comprobar($event)">
+</app-lista-comprobantes-carga>
 
 <app-loading-modal *ngIf="show_loading"></app-loading-modal>
