--- a/src/app/modulos/comprobaciones-gastos/otros-gastos/otros-gastos-list/otros-gastos-list.component.html
+++ b/src/app/modulos/comprobaciones-gastos/otros-gastos/otros-gastos-list/otros-gastos-list.component.html
@@ -27,7 +27,7 @@
                 <th scope="">Monto Reembolsar</th>
                 <th scope="">Moneda</th>
                 <th scope="">Centro Costo</th>
-                <th scope="">Compañia</th>
+                <th scope="">Compañía</th>
                 <th scope="">Usuario Aprobador</th>
                 <th scope="">Acción </th>
               </tr>
@@ -46,9 +46,14 @@
                 <td>{{ item.nombre_compania}}</td>
                 <td>{{ item.nombre_usuario_aprobador}}</td>
                 <td>
-                  <a class="btn btn-primary text-white btn-sm m-1" (click)="eliminar(item.id)">
-                    <i class="far fa-trash-alt"> Borrador</i>
-                  </a>
+                  <div style="white-space: nowrap">
+                    <a class="btn btn-primary text-white btn ml-2" (click)="eliminar(item.id)">
+                      <i class="far fa-trash-alt"> </i> Borrador
+                    </a>
+                    <button class="btn btn-primary text-white btn ml-2" (click)="editarBorrador(item.id)">
+                      Editar
+                    </button>
+                  </div>
                 </td>
               </tr>
             </tbody>
