--- a/src/app/modulos/comprobaciones-gastos/gastos_viajes/gastos-viajes-list/gastos-viajes-list.component.html
+++ b/src/app/modulos/comprobaciones-gastos/gastos_viajes/gastos-viajes-list/gastos-viajes-list.component.html
@@ -47,9 +47,14 @@
               <td>{{ item.nombre_compania}}</td>
               <td>{{ item.nombre_usuario_aprobador}}</td>
               <td>
-                <a class="btn btn-primary text-white btn-sm m-1" (click)="eliminar(item.id)">
-                  <i class="far fa-trash-alt"> Borrador</i>
-                </a>
+                <div style="white-space: nowrap">
+                  <a class="btn btn-primary text-white btn ml-2" (click)="eliminar(item.id)">
+                    <i class="far fa-trash-alt"> </i> Borrador
+                  </a>
+                  <button class="btn btn-primary text-white btn ml-2" (click)="editarBorrador(item.id)">
+                    Editar
+                  </button>
+                </div>
               </td>
             </tr>
           </tbody>
